Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-785: Improve GraphPartitionerFactory usage (ikabiljo via majakabiljo)

  GIRAPH-815: Exclude dependency and duplicate finder checks to profile we do not check (aching)

  GIRAPH-798: Upgrade Giraph to Java7 and fix all dependencies (aching)

  GIRAPH-797: If the vertex input data path is incorrect Giraph job hangs indefinitely 
  until killed by JobTracker for exceeding timeout (jaeyu via claudio)

  GIRAPH-793: Create necessary documentation for Giraph-Gora integration 
  (renato2099 via claudio)

  GIRAPH-760: Create EdgeOutputFormat to Apache Gora (renato2099 via claudio)

  GIRAPH-759: Create EdgeInputFormat from Apache Gora (renato2099 via claudio)

  GIRAPH-758: Create VertexOutputFormat to Apache Gora (renato2099 via claudio)
  
  GIRAPH-757: Create VertexInputFormat from Apache Gora (renato2099 via claudio)

  GIRAPH-442: FileNotFoundException: <baseDirectory>/_zkServer is checked before it is created
  (miteshsjat via claudio)

  GIRAPH-796: Site build error with maven 3.1 (armax00 via claudio)

  GIRAPH-782: giraph script can't find GIRAPH_ENV_DIR when called via $PATH (rvs)

  GIRAPH-783: giraph bin script should pick up giraph-core jar to pass to hadoop (rvs) 

  GIRAPH-781: binary tarball lacks /bin and /conf directories (rvs)

  GIRAPH-749: Update documentation according to the new EdgeOutputFormat API 
  (armax00 via claudio)

  GIRAPH-738: Fix typos in quick start guide (aladagemre via claudio)

  GIRAPH-755: Make ZooKeeper port list available to input/output format (armax00 via claudio)

  GIRAPH-737: Giraph Application Master: Move to new and stable YARN API (mislam via ereisman)

  GIRAPH-791: HiveGiraphRunner picks -D options too late (majakabiljo)

  GIRAPH-790: Add a way to automatically retry a job (majakabiljo)

  GIRAPH-789: Upgrade hive-io to 0.20 - less metastore accesses (majakabiljo)

  GIRAPH-787: Use HiveIO 1.9 (gmalewicz via aching)
