@@ -40,8 +40,14 @@ public class GiraphStats extends HadoopCountersBase {
   public static final String EDGES_NAME = "Aggregate edges";
   /** sent messages counter name */
   public static final String SENT_MESSAGES_NAME = "Sent messages";
-  /** sent messages counter name */
+  /** sent message bytes counter name */
   public static final String SENT_MESSAGE_BYTES_NAME = "Sent message bytes";
+  /** aggregate sent messages counter name */
+  public static final String AGGREGATE_SENT_MESSAGES_NAME
+    = "Aggregate sent messages";
+  /** aggregate sent messages bytes counter name */
+  public static final String AGGREGATE_SENT_MESSAGE_BYTES_NAME
+    = "Aggregate sent message message bytes";
   /** workers counter name */
   public static final String CURRENT_WORKERS_NAME = "Current workers";
   /** current master partition task counter name */
@@ -72,8 +78,12 @@ public class GiraphStats extends HadoopCountersBase {
   private static final int LAST_CHECKPOINTED_SUPERSTEP = 7;
   /** Sent message bytes counter */
   private static final int SENT_MESSAGE_BYTES = 8;
+  /** Aggregate sent messages counter */
+  private static final int AGG_SENT_MESSAGES = 9;
+  /** Aggregate sent message bytes counter */
+  private static final int AGG_SENT_MESSAGE_BYTES = 10;
   /** Number of counters in this class */
-  private static final int NUM_COUNTERS = 9;
+  private static final int NUM_COUNTERS = 11;
 
   /** All the counters stored */
   private final GiraphHadoopCounter[] counters;
@@ -97,6 +107,10 @@ public class GiraphStats extends HadoopCountersBase {
         getCounter(CURRENT_MASTER_PARTITION_TASK_NAME);
     counters[LAST_CHECKPOINTED_SUPERSTEP] =
         getCounter(LAST_CHECKPOINTED_SUPERSTEP_NAME);
+    counters[AGG_SENT_MESSAGES] =
+        getCounter(AGGREGATE_SENT_MESSAGES_NAME);
+    counters[AGG_SENT_MESSAGE_BYTES] =
+        getCounter(AGGREGATE_SENT_MESSAGE_BYTES_NAME);
   }
 
   /**
@@ -169,6 +183,24 @@ public class GiraphStats extends HadoopCountersBase {
    */
   public GiraphHadoopCounter getSentMessageBytes() {
     return counters[SENT_MESSAGE_BYTES];
+  }
+
+  /**
+   * Get AggregateSentMessages counter
+   *
+   * @return AggregateSentMessages counter
+   */
+  public GiraphHadoopCounter getAggregateSentMessages() {
+    return counters[AGG_SENT_MESSAGES];
+  }
+
+  /**
+   * Get AggregateSentMessageBytes counter
+   *
+   * @return AggregateSentMessageBytes counter
+   */
+  public GiraphHadoopCounter getAggregateSentMessageBytes() {
+    return counters[AGG_SENT_MESSAGE_BYTES];
   }
 
   /**
